Changes required for distribution